--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </header>
 
         <div class="timer-on-off text-end me-5">
-            <span class="h6">Timer </span>
+            <label for="timer-on-off"><span class="h6 user-select-none">Timer </span></label>
             <input type="checkbox" id="timer-on-off" onclick="showHideTimer();" checked>
         </div>
         <div class="text-center time-icon">
